--- a/assets/sass/helpers/_variables.scss
+++ b/assets/sass/helpers/_variables.scss
@@ -41,13 +41,13 @@ $border-color-s2: #e4ebf2;
 
 // change-color
 
-$theme-color-2:#835845;
-$theme-color-3:#1e8267;
+$theme-color-2:#7FC1E9;
+$theme-color-3:#7FC1E9;
 $theme-color-4:#de5ca2;
 $theme-color-5:#d9ba91;
 $theme-color-6:#99337f;
 $theme-color-7:#18A7B5;
-$theme-color-8:#668c25;
+$theme-color-8:#7FC1E9;
 $theme-color-9:#ff8051;
 $theme-color-10:#dd6673;
 $theme-color-11:#d58675;
