Color blue all the way

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -9568,7 +9568,7 @@ a.ui-button:active, .ui-button:active,
 .wpo-contact-section-s6 .bottom-bg svg .bg-path,
 .wpo-contact-section-s7 .bottom-bg svg .bg-path,
 .wpo-contact-section-s8 .bottom-bg svg .bg-path {
-  fill: #A5AA9C;
+  fill: #7FC1E9;
 }
 
 .wpo-contact-section .bottom-bg svg .bg-stroke,
