--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -2159,18 +2159,17 @@ a.ui-button:active, .ui-button:active,
     position: relative;
   }
   .wpo-site-header #navbar > ul > li > a:before {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 4px;
-    background: #A3D8F4;
-    content: "";
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: all .3s;
-    transition: all .3s;
-    border-radius: 3px;
+  content: ""; /* must be on pseudo-element */
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  /* background: #A3D8F4; */
+  opacity: 0;
+  visibility: hidden;
+  border-radius: 3px;
+  transition: all 0.3s;
   }
   .wpo-site-header #navbar > ul > li > a:hover:before,
   .wpo-site-header #navbar > ul > li.current-menu-item a:before,
